--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.jcraft:jsch:0.1.54'
     compile 'com.jcraft:jzlib:1.1.3'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 configurations.all {
