added material dialogs lib // added progress dialog to async ssh connection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.4'
     testCompile 'junit:junit:4.12'
 }
 configurations.all {
