--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.haayhappen.instafarm"
-        minSdkVersion 16
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -29,18 +29,32 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+
+    //Bottom Action Bar
     compile 'com.roughike:bottom-bar:2.3.1'
+
+    //SSH Connection
     compile 'com.jcraft:jsch:0.1.54'
     compile 'com.jcraft:jzlib:1.1.3'
+
+    //Retrofit
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+
+    //Material Dialogs
     compile 'com.afollestad.material-dialogs:core:0.9.4.4'
+
+    //Firebase Messaging
     compile 'com.google.firebase:firebase-messaging:10.2.6'
-    testCompile 'junit:junit:4.12'
+
+    //Firebase Authentication
     compile 'com.google.firebase:firebase-auth:10.2.6'
+
+    // Google Sign In SDK (only required for Google Sign In)
     compile 'com.google.android.gms:play-services-auth:10.2.6'
+    testCompile 'junit:junit:4.12'
 }
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
