--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     })
 //TagEditView
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
+    compile 'co.lujun:androidtagview:1.1.3'
 
 
     compile 'com.android.support:appcompat-v7:25.3.1'
