--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
     compile 'co.lujun:androidtagview:1.1.3'
 
+    //In App Billing library
+    compile 'com.anjlab.android.iab.v3:library:1.0.+'
+
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
