--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         maven { url "https://jitpack.io" }
         jcenter()
         //maven { url 'https://maven.fabric.io/public' }
