--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.haayhappen.instafarm"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 4
         versionName "0.4"
@@ -30,7 +30,10 @@ dependencies {
     compile 'co.lujun:androidtagview:1.1.3'
 
     //In App Billing library
-    //compile 'com.anjlab.android.iab.v3:library:1.0.+'
+    compile 'com.anjlab.android.iab.v3:library:1.0.+'
+    compile 'com.braintreepayments.api:drop-in:3.+'
+    compile 'com.braintreepayments.api:braintree:2.+'
+    compile 'com.intuit.sdp:sdp-android:1.0.3'
 
 
     compile 'com.android.support:appcompat-v7:25.3.1'
@@ -49,6 +52,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+
+    compile 'com.loopj.android:android-async-http:1.4.9'
 
     //Material Dialogs
     compile 'com.afollestad.material-dialogs:core:0.9.4.4'
