--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'co.lujun:androidtagview:1.1.3'
 
     //In App Billing library
-    compile 'com.anjlab.android.iab.v3:library:1.0.+'
+//    compile 'com.anjlab.android.iab.v3:library:1.0.+'
     compile 'com.braintreepayments.api:drop-in:3.+'
     compile 'com.braintreepayments.api:braintree:2.+'
     compile 'com.intuit.sdp:sdp-android:1.0.3'
@@ -59,13 +59,13 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.4.4'
 
     //Firebase Messaging
-    compile 'com.google.firebase:firebase-messaging:10.2.6'
+//    compile 'com.google.firebase:firebase-messaging:10.2.6'
 
     //Firebase Authentication
-    compile 'com.google.firebase:firebase-auth:10.2.6'
+//    compile 'com.google.firebase:firebase-auth:10.2.6'
 
     // Google Sign In SDK (only required for Google Sign In)
-    compile 'com.google.android.gms:play-services-auth:10.2.6'
+//    compile 'com.google.android.gms:play-services-auth:10.2.6'
     testCompile 'junit:junit:4.12'
 
 
